--- a/app/src/main/res/layout/create_player.xml
+++ b/app/src/main/res/layout/create_player.xml
@@ -175,7 +175,7 @@
         android:layout_marginEnd="157dp"
         android:layout_marginRight="157dp"
         android:layout_marginBottom="116dp"
-        android:text="Plese enter points that add up to 16"
+        android:text="Please enter points that add up to 16"
         android:textColor="#900"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
