minor ui stuff on port menu

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
@@ -11,6 +12,10 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_map" />
 
+    <item
+        android:id="@+id/port"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="Port" />
     <item
         android:id="@+id/player_status"
         android:icon="@drawable/ic_notifications_black_24dp"
