--- a/app/src/main/res/layout/create_player.xml
+++ b/app/src/main/res/layout/create_player.xml
@@ -250,8 +250,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner"
+        app:layout_constraintVertical_bias="0.460" />
 
 
 </android.support.constraint.ConstraintLayout>
