added RegionViewModel and populated the game map visually with starting regions

--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -18,16 +18,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonI"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonII"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
+            android:layout_gravity="start" />
 
         <Space
             android:layout_width="wrap_content"
@@ -45,16 +47,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonIII"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
+            android:layout_gravity="start" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -70,16 +74,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonV"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonVI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
+            android:layout_gravity="start" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -95,16 +101,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonVII"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonVIII"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
+            android:layout_gravity="start" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -120,17 +128,19 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
         <Button
+            android:id="@+id/buttonIX"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/buttonX"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
+            android:layout_gravity="start" />
         <Space
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
