Add button to transition from region screen to tradeAtPort screen

--- a/app/src/main/res/layout/region.xml
+++ b/app/src/main/res/layout/region.xml
@@ -169,5 +169,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.918" />
 
+    <Button
+        android:id="@+id/tradePort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="252dp"
+        android:layout_marginLeft="252dp"
+        android:text="TradeAtPort"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.918" />
+
 
 </android.support.constraint.ConstraintLayout>
